--- a/GasApp/src/app/components/gasolinera/gasolinera.component.html
+++ b/GasApp/src/app/components/gasolinera/gasolinera.component.html
@@ -1,11 +1,4 @@
-<mat-slider
-  thumbLabel
-  [displayWith]="formatLabel"
-  tickInterval="1000"
-  step="1"
-  min="0"
-  max="100000"
-  aria-label="units"></mat-slider>
+
 <div>
     <mat-card *ngFor="let gaso of listaGasolineras">
         <mat-card-title>Nombre : {{gaso['Rótulo']}}</mat-card-title>
@@ -14,6 +7,7 @@
             <p>Gasolina 95 : {{gaso['Precio Gasolina 95 E5']}} €<p>
             <p>Gasoleo : {{gaso['Precio Gasoleo A']}} €<p>
             <p>Hidrogeno : {{gaso['Precio Hidrogeno']}} €<p>
+            <p>Provincia : {{gaso['Provincia']}}</p>
         </mat-card-content>
     </mat-card>
 </div>
