need municipios endpoint

--- a/GasApp/src/app/components/gasolinera/gasolinera.component.html
+++ b/GasApp/src/app/components/gasolinera/gasolinera.component.html
@@ -1,6 +1,31 @@
-
 <div>
-    <mat-card *ngFor="let gaso of listaGasolineras">
+    <button class="button" mat-raised-button color="primary" (click)="filtros()">Filtrar</button>
+    <mat-card class="card">
+        <h2>Precio</h2>
+        <br>
+        <mat-slider
+        class="example-margin"
+        [disabled]="false"
+        [invert]="false"
+        [max]="max"
+        [min]="min"
+        [step]="0.1"
+        [thumbLabel]="true"
+        [displayWith]="formatLabel"
+        [tickInterval]="1"
+        [vertical]="false"
+        aria-labelledby="example-name-label">
+    </mat-slider>
+    <mat-form-field appearance="fill" style="margin: 5px;">
+        <mat-label>Provincia</mat-label>
+        <mat-select [(ngModel)]="provinciaSelected" multiple (selectionChange)="filtros()">
+          <mat-option [value]="provincia.IDPovincia" *ngFor="let provincia of listaProvincias">{{provincia.Provincia}}</mat-option>
+        </mat-select>
+      </mat-form-field>
+    </mat-card>
+</div>
+<div>    
+    <mat-card class="card" *ngFor="let gaso of listaGasolineras">
         <mat-card-title>Nombre : {{gaso['Rótulo']}}</mat-card-title>
         <mat-card-content>
             <p>Dirección : {{gaso['Dirección']}}<p>        
